--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "vercel-build": "next build"
   },
   "dependencies": {
+    "lucide-react": "^0.544.0",
     "next": "14.2.12",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "typescript": "5.6.3",
-    "@types/react": "18.3.5",
     "@types/node": "20.16.10",
+    "@types/react": "18.3.5",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.12"
+    "eslint-config-next": "14.2.12",
+    "typescript": "5.6.3"
   }
 }
