--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "vercel-build": "next build",
-    "curation:plan": "node scripts/curation-plan.mjs"
+    "curation:plan": "node scripts/curation-plan.mjs",
+    "curation:apply": "node scripts/curation-apply.mjs"
   },
   "dependencies": {
     "lucide-react": "^0.544.0",
