--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "vercel-build": "next build",
     "curation:plan": "node scripts/curation-plan.mjs",
-    "curation:apply": "node scripts/curation-apply.mjs"
+    "curation:apply": "node scripts/curation-apply.mjs",
+    "curation:auto": "node scripts/curation-auto-apply.mjs"
   },
   "dependencies": {
     "lucide-react": "^0.544.0",
