--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@types/react": "18.3.5",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.12",
-    "typescript": "5.6.3",
-    "ts-node": "10.9.2"
+    "jpeg-js": "^0.4.4",
+    "pngjs": "^7.0.0",
+    "ts-node": "10.9.2",
+    "typescript": "5.6.3"
   }
 }
