--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,8 @@
   "git": {
     "lfs": true
   },
-  "framework": "nextjs"
+  "framework": "nextjs",
+  "installCommand": "npm install",
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next"
 }
